v1.0
	-Myl
v1.1
	-Agregada la opción para enviar comentarios
v1.2
	-Se corrige el armado de los mazos, manteniendo el estado actual cuando se presenta un error al guardar.
	-Se agrega la restricción para los formatos de mazo.
	-Se agrega la etiqueta de formato de mazo en el chat.
	-BugFix: Se corrige el error al intentar eliminar un mazo.
v1.3
	-Se agrega Furia
	-BugFix: Se corrige el error al intentar colocar un mazo como predeterminado.
	-La arena de duelo se abre en una nueva ventana
	-Se agregan notificaciones cuando un usuario abandona o reinicia el juego.
v1.4
	-BugFix: Se corrige el error que muestra la notificación de otros usuarios abandonando las partidas.
	-Se regresa al estilo de cambio de ventana.
v1.45
	-Se agrega más detalle al perfil del usuario
	-Se agrega la opción para recuperar contraseña
v1.5
	-Se valida el tamaño del mazo antes de entrar a jugar.
	-Se agrega la sala de chat general
v1.6
	-Se modifica la sección de reglas y ayuda