@@ -23,3 +23,6 @@ v1.5
 	-Se agrega la sala de chat general
 v1.6
 	-Se modifica la sección de reglas y ayuda
+	-Se añade mas detalle al botar x cartas, indicando cuantas cartas han sido botadas.
+	-Se indica cuando el mazo castillo ya no tiene mas cartas.
+	-Se agregan notificaciones de victoria y derrota.
